# C_Studies

./: CDAula2Questoes.ipynb  CDAula2atividade.ipynb  CDAula2solucao.ipynb  CMakeLists.txt  README.md  main.c
Data_Structure_Exercises/: Exercise1_ED_Exercicio_Pesquisa.c  Exercise1_Filas.c  Exercise1_Recursividade_Slide2.c  Exercise1_Struct.c  Exercise_ED_Exercicio_Listas_Ordenadas.c
HackerRank_Exercises/: Bitwise_Operators.c  Busca binaria.c  Conditional_Statements_In_C .c  Fila.c  For_Loop_In_C.c  Functions_In_C .c  Hello_World_In_C.c  InsertSort.c  Playing_With_Characters.c  Pointers_In_C .c  Sum_And_Difference_Of_Two_Numbers.c  Sum_Of_Digits_Of_A_Five_Digit_Number.c
